[package]
name = "schoenberg"
version = "0.1.0"
authors = ["Tomer Aberbach <tomer@aberba.ch>"]
license = "MIT"
description = "The MIDI Esoteric Programming Language"
readme = "readme.md"
homepage = "https://tomeraberba.ch/schoenberg"
repository = "https://github.com/TomerAberbach/schoenberg"
keywords = ["brainfuck", "cli", "esolang", "esoteric", "midi"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap-stdin = "0.6.0"
indexmap = "2.9.0"
midly = { version = "0.5.3", features = ["strict"] }
rand = "0.9.1"

[dev-dependencies]
proptest = "1.6.0"
